--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ ADMIN_EMAIL = "admin@gmail.com"
 ADMIN_PASSWORD = "admin@1234"
 
 # MongoDB Setup ( required )
-MONGODB_URI = "mongodb://localhost:27017/Dvax07"
+MONGODB_URI = "mongodb+srv://harshmaurya78748:QfRszY8Putw0vsi2@cluster0.kbcjkp3.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 
 # Cloudinary Setup ( required )
 CLOUDINARY_NAME = "diwb9pf8t"
