--- a/.env
+++ b/.env
@@ -5,6 +5,11 @@ JWT_SECRET="greatstackm"
 ADMIN_EMAIL = "admin@gmail.com"
 ADMIN_PASSWORD = "admin@1234"
 
+
+
+REDIS_URL="redis://default:WtyGjjWpgQ4XPKyoekwRHRIFpkZdef4s@redis-18416.c330.asia-south1-1.gce.cloud.redislabs.com:18416"
+MONGO_URL="mongodb+srv://harshmaurya78748:Unity5304@cluster0.kbcjkp3.mongodb.net/CHATAPP"
+#REDIS_URL = redis-18416.c330.asia-south1-1.gce.cloud.redislabs.com:18416
 # MongoDB Setup ( required )
 MONGODB_URI = "mongodb+srv://harshmaurya78748:QfRszY8Putw0vsi2@cluster0.kbcjkp3.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 
